fixed overflow issues and building sub page

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -73,14 +73,14 @@ section h1 {
 section > h1 {
   font-size: 30px;
   line-height: 40px;
-  margin-bottom: 20px; }
+  margin-bottom: 15px; }
   section > h1 > strong {
     font-weight: 400; }
 section h2 {
   font-size: 17px;
   font-weight: 600;
   margin-bottom: 15px;
-  line-height: 20px; }
+  line-height: 16px; }
   section h2 a {
     font-size: 12px;
     font-weight: 400; }
@@ -91,7 +91,7 @@ section p {
     margin-bottom: 0; }
 section > p {
   line-height: 25px;
-  margin-bottom: 20px; }
+  margin-bottom: 45px; }
 
 body {
   background: #f8f8f8; }
@@ -107,7 +107,7 @@ body {
     border: 1px solid transparent;
     clear: both;
     display: block;
-    margin: 5px 0; }
+    margin: 0; }
   body .float-left {
     float: left; }
   body .float-right {
@@ -324,19 +324,17 @@ body {
       border: 1px solid #dedede;
       padding: 20px;
       position: relative; }
-      body > section > div#content.panel {
-        overflow: hidden; }
-        body > section > div#content.panel > div:first-child {
-          float: left;
-          width: 63%;
-          padding-right: 2%;
-          -webkit-box-shadow: 1px 0 0 #eeeeee;
-          -moz-box-shadow: 1px 0 0 #eeeeee;
-          box-shadow: 1px 0 0 #eeeeee; }
-        body > section > div#content.panel > div:nth-child(2) {
-          float: left;
-          padding-left: 2%;
-          width: 33%; }
+      body > section > div#content.panel > div:first-child {
+        float: left;
+        width: 63%;
+        padding-right: 2%;
+        -webkit-box-shadow: 1px 0 0 #eeeeee;
+        -moz-box-shadow: 1px 0 0 #eeeeee;
+        box-shadow: 1px 0 0 #eeeeee; }
+      body > section > div#content.panel > div:nth-child(2) {
+        float: left;
+        padding-left: 2%;
+        width: 33%; }
     body > section > div > span, body > section > div div.panel > span {
       display: block;
       margin-bottom: 30px;
