--- a/assets/sass/layout/layout.scss
+++ b/assets/sass/layout/layout.scss
@@ -17,7 +17,7 @@ body {
       border: 1px solid transparent;
       clear: both;
       display: block;  
-      margin:5px 0; 
+      margin: 0; 
     }
   }
   .float-left {
