--- a/assets/sass/layout/section.scss
+++ b/assets/sass/layout/section.scss
@@ -11,7 +11,7 @@
       padding: 20px; 
       position: relative;
       &.panel {
-        overflow: hidden;
+        //overflow: hidden;
         > div {
           &:first-child {
             float: left;
