--- a/assets/sass/typography.scss
+++ b/assets/sass/typography.scss
@@ -27,7 +27,7 @@ section {
   > h1 {
     font-size: 30px;
     line-height: 40px;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
     > strong {
       font-weight: 400;  
     }
@@ -36,7 +36,7 @@ section {
     font-size: 17px;
     font-weight: 600;
     margin-bottom: 15px;
-    line-height: 20px;
+    line-height: 16px;
     a {
       font-size: 12px;
       font-weight: 400;
@@ -51,6 +51,6 @@ section {
   } 
   > p {
     line-height: 25px;
-    margin-bottom: 20px;
+    margin-bottom: 45px;
   }
 }
